SSO HTTP request logging: sso servlet, SingleSignOnUtils, login and logout URI requests logs
Signed-off-by: Gianluca Barbon <gianluca.barbon@eurotech.com>